<resources>
    <string name="app_name">FinalGroupProject</string>
    <string name="go_to_deezer_song_search">Go to Deezer Song Search</string>
    <string name="go_to_dictionary">Go to Dictionary</string>
    <string name="go_to_sunrise_sunset_lookup"><![CDATA[Go to Sunrise&Sunset Lookup]]></string>
    <string name="go_to_recipe_search">Go to Recipe Search</string>
    <string name="android_final_projects">Android Final Projects</string>
    <string name="definition">Definition</string>
    <string name="reset">Rest</string>
    <string name="enter_longitude">Enter Longitude</string>
    <string name="lookup_button">Lookup</string>
    <string name="sun_info_label">Sun Info</string>
    <string name="save_to_favorites_button">Save to Favorites</string>
    <string name="view_favorites_button">View Favorites</string>
    <string name="enter_latitude">Enter Latitude</string>
    <string name="latitude_longitude_empty">Please enter latitude and longitude</string>
    <string name="sun_info_date">Date: %1$s</string>
    <string name="sun_info_sunrise">Sunrise: %1$s</string>
    <string name="sun_info_sunset">Sunset: %1$s</string>
    <string name="error_fetching_data">Error fetching data</string>
    <string name="location_saved_to_favorites">Location saved to favorites</string>
    <string name="please_enter_latitude_longitude">Please enter latitude and longitude</string>
    <string name="delete_favorite_location_title">Delete Favorite Location</string>
    <string name="delete_favorite_location_message">Are you sure you want to delete this favorite location?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="help_dialog_title">Help</string>
    <string name="help_dialog_message">Instructions for using the Sunrise &amp; Sunset Lookup app:\n\n
        1. Enter the latitude and longitude of the location.\n
        2. Click the "Lookup" button to get sunrise and sunset times.\n
        3. Save locations to favorites and view them in the favorites list.\n
        4. Delete favorite locations if needed.\n
        5. The search term is saved for the next use.</string>
    <string name="ok">OK</string>
    <string name="Sunrise_Sunset_app">Sunrise | Sunset App</string>
    <string name="location_info_format">Lat: %1$s, Lng: %2$s</string>

</resources>